; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_each_set_owner.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_each_set_owner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.server = type { %struct.server_pool* }
%struct.server_pool = type { i32 }

@NC_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @server_each_set_owner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @server_each_set_owner(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.server*, align 8
  %6 = alloca %struct.server_pool*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.server*
  store %struct.server* %8, %struct.server** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.server_pool*
  store %struct.server_pool* %10, %struct.server_pool** %6, align 8
  %11 = load %struct.server_pool*, %struct.server_pool** %6, align 8
  %12 = load %struct.server*, %struct.server** %5, align 8
  %13 = getelementptr inbounds %struct.server, %struct.server* %12, i32 0, i32 0
  store %struct.server_pool* %11, %struct.server_pool** %13, align 8
  %14 = load i32, i32* @NC_OK, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
